samples/_failures_safe/1761320884_5308b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_049fe051.c: In function ‘main’:
./samples/SAFE/__tmp_049fe051.c:172:9: error: expected declaration or statement at end of input
  172 |         printf("> ");
      |         ^~~~~~
./samples/SAFE/__tmp_049fe051.c:172:9: error: expected declaration or statement at end of input
